Another snapshot for the SPHC meeting, fixes for various statistics and things
git-svn-id: https://svn.code.sf.net/p/specify/code/trunk/Specify@468 ce9bf4bf-376f-1848-a496-a1c9fe3b1a39